stderr.txt
/Users/robgleeson/Documents/twit-cli/twitter/index.js:45
checkForScheduledTweets(options);
                        ^

ReferenceError: options is not defined
    at Object.<anonymous> (/Users/robgleeson/Documents/twit-cli/twitter/index.js:45:25)
    at Module._compile (module.js:571:32)
    at Object.Module._extensions..js (module.js:580:10)
    at Module.load (module.js:488:32)
    at tryModuleLoad (module.js:447:12)
    at Function.Module._load (module.js:439:3)
    at Module.runMain (module.js:605:10)
    at run (bootstrap_node.js:423:7)
    at startup (bootstrap_node.js:147:9)
    at bootstrap_node.js:538:3
/Users/robgleeson/Documents/twit-cli/twitter/index.js:6
    process.stdout(process.argv)
            ^

TypeError: process.stdout is not a function
    at checkForScheduledTweets (/Users/robgleeson/Documents/twit-cli/twitter/index.js:6:13)
    at Object.<anonymous> (/Users/robgleeson/Documents/twit-cli/twitter/index.js:45:1)
    at Module._compile (module.js:571:32)
    at Object.Module._extensions..js (module.js:580:10)
    at Module.load (module.js:488:32)
    at tryModuleLoad (module.js:447:12)
    at Function.Module._load (module.js:439:3)
    at Module.runMain (module.js:605:10)
    at run (bootstrap_node.js:423:7)
    at startup (bootstrap_node.js:147:9)
/Users/robgleeson/Documents/twit-cli/twitter/index.js:54
}
^
SyntaxError: missing ) after argument list
    at createScript (vm.js:53:10)
    at Object.runInThisContext (vm.js:95:10)
    at Module._compile (module.js:543:28)
    at Object.Module._extensions..js (module.js:580:10)
    at Module.load (module.js:488:32)
    at tryModuleLoad (module.js:447:12)
    at Function.Module._load (module.js:439:3)
    at Module.runMain (module.js:605:10)
    at run (bootstrap_node.js:423:7)
    at startup (bootstrap_node.js:147:9)
/Users/robgleeson/Documents/twit-cli/twitter/index.js:7
background.ready(function(err, options) {
           ^

TypeError: background.ready is not a function
    at Object.<anonymous> (/Users/robgleeson/Documents/twit-cli/twitter/index.js:7:12)
    at Module._compile (module.js:571:32)
    at Object.Module._extensions..js (module.js:580:10)
    at Module.load (module.js:488:32)
    at tryModuleLoad (module.js:447:12)
    at Function.Module._load (module.js:439:3)
    at Module.runMain (module.js:605:10)
    at run (bootstrap_node.js:423:7)
    at startup (bootstrap_node.js:147:9)
    at bootstrap_node.js:538:3
module.js:472
    throw err;
    ^

Error: Cannot find module 'background'
    at Function.Module._resolveFilename (module.js:470:15)
    at Function.Module._load (module.js:418:25)
    at Module.require (module.js:498:17)
    at require (internal/module.js:20:19)
    at Object.<anonymous> (/Users/robgleeson/Documents/twit-cli/twitter/index.js:5:18)
    at Module._compile (module.js:571:32)
    at Object.Module._extensions..js (module.js:580:10)
    at Module.load (module.js:488:32)
    at tryModuleLoad (module.js:447:12)
    at Function.Module._load (module.js:439:3)
SyntaxError: Unexpected token o in JSON at position 1
    at JSON.parse (<anonymous>)
    at checkForScheduledTweets (/Users/robgleeson/Documents/twit-cli/twitter/index.js:17:24)
    at /Users/robgleeson/Documents/twit-cli/twitter/index.js:64:5
    at process.<anonymous> (/Users/robgleeson/Documents/twit-cli/node_modules/background-process/index.js:66:7)
    at emitTwo (events.js:106:13)
    at process.emit (events.js:194:7)
    at process.nextTick (internal/child_process.js:766:12)
    at _combinedTickCallback (internal/process/next_tick.js:73:7)
    at process._tickCallback (internal/process/next_tick.js:104:9)
